Improve Javadoc comments for clarity and detail across multiple classes